--- a/server/login-multi-chain/src/main/resources/application.yml
+++ b/server/login-multi-chain/src/main/resources/application.yml
@@ -1,2 +1,8 @@
 server:
   port: 9054
+
+spring:
+  thymeleaf:
+    prefix: classpath:/templates/
+    cache: false
+    check-templates-location: true
